force-app/main/default/objects/FEC_Reference_Info__c/FEC_Reference_Info__c.object-meta.xml
<CustomObject>
    <label>Reference Info</label>
    <nameField>
        <displayFormat>RIN - {0}</displayFormat>
        <label>Reference Info Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Reference Info</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>