force-app/main/default/objects/FEC_Reference_Info__c/fields/FEC_Full_Name__c.field-meta.xml
<CustomField>
    <fullName>FEC_Full_Name__c</fullName>
    <description>Tên người tham chiếu</description>
    <label>Full Name</label>
    <length>80</length>
    <type>Text</type>
</CustomField>