force-app/main/default/objects/FEC_Reference_Info__c/fields/FEC_Phone_Number__c.field-meta.xml
<CustomField>
    <fullName>FEC_Phone_Number__c</fullName>
    <label>Phone Number</label>
    <type>Phone</type>
</CustomField>