force-app/main/default/objects/FEC_Reference_Info__c/fields/FEC_Relationship__c.field-meta.xml
<CustomField>
    <fullName>FEC_Relationship__c</fullName>
    <description>Mối quan hệ</description>
    <label>Relationship</label>
    <length>255</length>
    <type>Text</type>
</CustomField>